# find-git-dirs

./: .gitignore  Cargo.toml  README.md  install
src/: main.rs
